[package]
name = "fitbit-rs-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.3"
url = "2.2"
tokio = { version = "1", features = ["full"] }
serde = "1.0.195"
reqwest = { version = "0.11.23", features = ["json"] }
axum = "0.7.3"
anyhow = "1.0.79"
serde_json = "1.0.111"
