[package]
name = "fitbit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
clap = { version = "4.4.14", features = ["derive", "env"] }
log = "0.4.20"
oauth2 = "4.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
simple_logger = "4.3.3"
tokio = { version = "1", features = ["full"] }
url = "2.2"
